--- a/index.css
+++ b/index.css
@@ -77,9 +77,36 @@ form {
 }
 
 input {
-    padding: 1.5em;
+    width: 100%;
+    height: 100%;
+    padding: 1em 1em;
+    border: none;
+    outline: none;
+    font-family: var(--font-family);
+    font-weight: bold;
+    border-radius: 0.3em;
+}
+
+.info {
     border: 1px solid var(--grayish-blue);
-    border-radius: 0.5em;
+    border-radius: 0.3em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 1em;
+}
+
+.icon-error {
+    display: none;
+}
+
+.text-error {
+    display: none;
+    align-self: self-end;
+    color: var(--red);
+    font-size: 0.8em;
+    justify-content: end;
+    margin-bottom: -1em;
 }
 
 input::placeholder {
@@ -105,6 +132,7 @@ button {
 }
 
 .terms-services {
+    cursor: pointer;
     color: var(--red);
 }
 
